--- a/package.yml
+++ b/package.yml
@@ -1,8 +1,8 @@
 name       : gnome-desktop-branding
 version    : 16.0
-release    : 32
+release    : 33
 source     :
-    - git|https://dev.getsol.us/source/gnome-desktop-branding-src.git : 01a116770ed8d0179ce0f468a316a605ffe88617
+    - git|https://dev.getsol.us/source/gnome-desktop-branding-src.git : b59f6470d07cdfa34384350a78aa1f1654bbbb16
 license    : GPL-2.0-only
 component  :
     - desktop.gnome
@@ -18,14 +18,14 @@ summary    :
     - legacy : Legacy Solus GNOME desktop branding
     - livecd : Solus 4.0 GNOME LiveCD configuration
     - material : Material Design inspired GNOME experience
-    - minimal: Minimal GNOME experience changes. For Solus 4.4 and beyond.
+    - minimal : Minimal GNOME experience changes. For Solus 4.4 and beyond
     - shared : Shared dependencies of various branding packages
 description:
     - Defaults for the GNOME Desktop
     - fortitude : Solus 4.0 Fortitude defaults for our GNOME experience.
     - legacy : Legacy Solus GNOME desktop branding.
     - livecd : Solus 4.0 LiveCD configuration.
-    - minimal: Minimal GNOME experience changes (no font, extensions, iconography, theming changes). For Solus 4.4 and beyond.
+    - minimal : Minimal GNOME experience changes (no font, extensions, iconography, theming changes). For Solus 4.4 and beyond.
     - material : Material Design inspired GNOME experience.
     - shared : Shared dependencies of various branding packages.
 patterns   :
